# CareerMentor

./: .gitignore  README.md  app.json  package-lock.json  package.json  start_careermentor.sh
Agentic_AI_System/backend-api/: .env.docker  .env.example  Dockerfile  Dockerfile.save  career_mentor.db  main.py  path_finder_results.json  pyproject.toml  simple_path_finder_api.py  start_with_ngrok.py
Agentic_AI_System/backend-api/agents/mock_mate/: agent.py
Agentic_AI_System/backend-api/crews/mock_mate/: crew.py  run_mock_mate_crew.py
Agentic_AI_System/backend-api/crews/mock_mate/config/: agents.yaml  tasks.yaml
Agentic_AI_System/backend-api/crews/path_finder/: crew.py  job_filter.py  job_scraper.py  run_path_finder_crew.py  search_path.py  skills_matcher.py
Agentic_AI_System/backend-api/crews/path_finder/config/: agents.yaml  tasks.yaml
Agentic_AI_System/backend-api/crews/resume_refiner/: analyzer.py  crew.py  feedback.py  layout_agent.py  match_agent.py  parser.py  parser_agent.py  quality_agent.py  run_resume_refiner_crew.py
Agentic_AI_System/backend-api/crews/resume_refiner/config/: agents.yaml  tasks.yaml
Agentic_AI_System/backend-api/crews/resume_refiner/test_data/: Resume-Maximilian-Weicht.heic  test_agents.py  test_match_agent.py
Agentic_AI_System/backend-api/crews/test/: crew.py  run_test_crew.py
Agentic_AI_System/backend-api/crews/track_pal/: crew.py  run_track_pal_crew.py
Agentic_AI_System/backend-api/database/: __init__.py  db_utils.py  init_db.py  models.py
Agentic_AI_System/backend-api/scripts/: add_mock_resume.py  check_saved_jobs_in_mongodb.py  init_mongodb.py  inspect_mongodb.py  path_finder_results.json  test_adzuna_api.py  test_path_finder.py  test_saved_jobs.py  update_all_containers.sh  update_backend.sh  upload_mock_data.py
Agentic_AI_System/backend-api/services/: session_manager.py
Agentic_AI_System/backend-api/services/mongodb/: __init__.py  client.py  global_state_service.py  mongodb_pathfinder_utils.py  mongodb_resume_utils.py  sync_service.py
(+103 files in other folders)
