[project]
name = "backend-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Elric Ettmüller", email = "elric.ettmueller@hm.edu"},
    {name = "Azim Alizada", email = "azim.alizada@hm.edu"},
    {name = "Maximilian Weicht", email = "maximilian.weicht@hm.edu"},
    {name = "Alessandro Fisslinger", email = "alessandro.fisslinger@hm.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
